@@ -32,9 +32,9 @@ class UsersController extends JController
 		$document	= JFactory::getDocument();
 
 		// Set the default view name and format from the Request.
-		$vName		= JRequest::getWord('view', 'login');
-		$vFormat	= $document->getType();
-		$lName		= JRequest::getWord('layout', 'default');
+		$vName	 = JRequest::getWord('view', 'login');
+		$vFormat = $document->getType();
+		$lName	 = JRequest::getWord('layout', 'default');
 
 		if ($view = $this->getView($vName, $vFormat)) {
 			// Do any specific processing by view.
@@ -91,10 +91,6 @@ class UsersController extends JController
 						return;
 					}
 
-					$model = $this->getModel($vName);
-					break;
-
-				case 'reset':
 					$model = $this->getModel($vName);
 					break;
 
