@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 	<!-- $Id$ -->
 <form>
-	<fieldset name="default">
-		<field name="email" type="text"
+	<fieldset name="default" label="COM_USERS_REMIND_DEFAULT_LABEL">		<field name="email" type="text"
 			class="validate-email"
 			description="COM_USERS_FIELD_REMIND_EMAIL_DESC"
 			label="COM_USERS_FIELD_REMIND_EMAIL_LABEL"
