@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 	<!-- $Id$ -->
 <form>
-	<fieldset name="default">
-		<field name="username" type="text"
+	<fieldset name="default" label="COM_USERS_RESET_REQUEST_LABEL">
+		<field name="email" type="text"
 			class="validate-username"
 			description="COM_USERS_FIELD_PASSWORD_RESET_DESC"
-			filter="username"
-			label="COM_USERS_FIELD_PASSWORD_RESET_LABEL"
+			filter="email"			label="COM_USERS_FIELD_PASSWORD_RESET_LABEL"
 			required="true"
 			size="30"
 		/>
