@@ -13,7 +13,6 @@ COM_USERS_EMAIL_ACTIVATE_WITH_ADMIN_ACTIVATION_BODY="Hello administrator,\n\nA n
 COM_USERS_EMAIL_ACTIVATE_WITH_ADMIN_ACTIVATION_SUBJECT="Registration approval required for account of %s at %s"
 COM_USERS_EMAIL_ACTIVATED_BY_ADMIN_ACTIVATION_BODY="Hello %s,\n\nYour account has been activated by an administrator. You can now login at %s using the username %s and the password you chose while registering."
 COM_USERS_EMAIL_ACTIVATED_BY_ADMIN_ACTIVATION_SUBJECT="Account activated for %s at %s"
-COM_USERS_MAIL_FAILED="Failed sending e-mail."
 COM_USERS_EMAIL_PASSWORD_RESET_BODY="Hello,\n\na request has been made to reset your %s account password. To reset your password, you will need to submit this token in order to verify that the request was legitimate.\n\nThe token is %s .\n\nClick on the URL below to enter the token and proceed with resetting your password.\n\n %s \n\nThank you."
 COM_USERS_EMAIL_PASSWORD_RESET_SUBJECT="Your %s password reset request"
 COM_USERS_EMAIL_REGISTERED_BODY="Hello %s,\n\nThank you for registering at %s.\n\nYou may now log in to %s using the username and password you registered with."
@@ -21,14 +20,23 @@ COM_USERS_EMAIL_REGISTERED_WITH_ACTIVATION_BODY="Hello %s,\n\nThank you for regi
 COM_USERS_EMAIL_REGISTERED_WITH_ADMIN_ACTIVATION_BODY="Hello %s,\n\nThank you for registering at %s. Your account is created and must be verified before you can use it.\nTo verify the account click on the following link or copy-paste it in your browser:\n %s \n\nAfter verification an administrator will be notified to activate your account. You'll receive a confirmation when it's done.\nOnce that account has been activated you may login to %s using the following username and password:\n\nUsername: %s\nPassword: %s"
 COM_USERS_EMAIL_USERNAME_REMINDER_BODY="Hello,\n\nA username reminder has been requested for your %s account.\n\nYour username is %s.\n\nTo login to your account, click on the link below.\n\n%s \n\nThank you."
 COM_USERS_EMAIL_USERNAME_REMINDER_SUBJECT="Your %s username"
-COM_USERS_FIELD_REMIND_EMAIL_DESC="Please enter the e-mail address associated with your User account.<br /> Your username will be e-mailed to the e-mail address on file."
-COM_USERS_FIELD_REMIND_EMAIL_LABEL="E-mail Address:"
 COM_USERS_FIELD_PASSWORD_RESET_DESC="Please enter the e-mail address associated with your User account.<br />A verification token will be sent to you. Once you have received the token, you will be able to choose a new password for your account."
 COM_USERS_FIELD_PASSWORD_RESET_LABEL="E-mail Address:"
+COM_USERS_FIELD_REMIND_EMAIL_DESC="Please enter the e-mail address associated with your User account.<br /> Your username will be e-mailed to the e-mail address on file."
+COM_USERS_FIELD_REMIND_EMAIL_LABEL="E-mail Address:"
+COM_USERS_FIELD_RESET_CONFIRM_TOKEN_DESC="Enter the password reset token you received by email."
+COM_USERS_FIELD_RESET_CONFIRM_TOKEN_LABEL="Token:"
+COM_USERS_FIELD_RESET_PASSWORD1_DESC="Enter your new password"
+COM_USERS_FIELD_RESET_PASSWORD1_LABEL="Password:"
+COM_USERS_FIELD_RESET_PASSWORD1_MESSAGE="The passwords you entered do not match. Please enter your desired password in the password field and confirm your entry by entering it in the confirm password field."
+COM_USERS_FIELD_RESET_PASSWORD2_DESC="Confirm your new password"
+COM_USERS_FIELD_RESET_PASSWORD2_LABEL="Confirm Password:"
+COM_USERS_FIELD_RESET_PASSWORD2_MESSAGE="Password invalid"
 COM_USERS_LOGIN_REGISTER="Don't have an account?"
 COM_USERS_LOGIN_REMIND="Forgot your username?"
 COM_USERS_LOGIN_RESET="Forgot your password?"
 COM_USERS_LOGIN_USERNAME_LABEL="User Name"
+COM_USERS_MAIL_FAILED="Failed sending e-mail."
 COM_USERS_OPTIONAL="(optional)"
 COM_USERS_OR="or"
 COM_USERS_PROFILE="User Profile"
@@ -91,16 +99,19 @@ COM_USERS_REGISTRATION_SAVE_SUCCESS="Thank you for registering. You may now log 
 COM_USERS_REGISTRATION_SEND_MAIL_FAILED="An error was encountered while sending the registration e-mail."
 COM_USERS_REGISTRATION_VERIFY_SUCCESS="Your email has been verified. Once an administrator approves your account, you will be notified by email, and you can login to the site."
 COM_USERS_REMIND="Reminder"
+COM_USERS_REMIND_DEFAULT_LABEL="Please enter the e-mail address associated with your User account. Your username will be e-mailed to the e-mail address on file."
 COM_USERS_REMIND_EMAIL_LABEL="Your E-mail"
-COM_USERS_REMIND_REQUEST_SUCCESS="Reminder successfully sent. Please check your mail."
 COM_USERS_REMIND_REQUEST_FAILED="Reminder failed. Make sure you entered a valid e-mail in the field."
+COM_USERS_REMIND_REQUEST_SUCCESS="Reminder successfully sent. Please check your mail."
 COM_USERS_RESET_COMPLETE_ERROR="Error completing password reset."
 COM_USERS_RESET_COMPLETE_FAILED="Completing reset password failed: %s"
+COM_USERS_RESET_COMPLETE_LABEL="To complete the password reset process, please enter a new password."
 COM_USERS_RESET_COMPLETE_SUCCESS="Reset password successful. You may now login to the site."
 COM_USERS_RESET_CONFIRM_ERROR="Error while confirming the password."
+COM_USERS_RESET_CONFIRM_FAILED="Your password reset confirmation failed because the token was invalid."
+COM_USERS_RESET_CONFIRM_LABEL="An e-mail has been sent to your e-mail address. The e-mail contains a verification token, please paste the token in the field below to prove that you are the owner of this account."
 COM_USERS_RESET_REQUEST_ERROR="Error requesting password reset."
 COM_USERS_RESET_REQUEST_FAILED="Reset passsword failed: %s"
-COM_USERS_RESET_REQUEST_SUCCESS="Password successfully reset."
-COM_USERS_USER_NOT_FOUND="User not found"
+COM_USERS_RESET_REQUEST_LABEL="Please enter the e-mail address for your account. A verification token will be sent to you. Once you have received the token, you will be able to choose a new password for your account."COM_USERS_USER_NOT_FOUND="User not found"
 COM_USERS_USER_BLOCKED="This user is blocked. If this is an error, please contact an administrator."
 COM_USERS_USER_SAVE_FAILED="Failed to save user: %s"
