@@ -38,6 +38,7 @@ JEDITOR="Editor"
 JENABLED="Enabled"
 JFALSE="False"
 JHIDE="Hide"
+JINVALID_TOKEN="Invalid Token"
 JLOGIN="Log in"
 JLOGOUT="Log out"
 JNEW="New"
